conformance/tests/httproute-cross-namespace.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: cross-namespace
  namespace: gateway-conformance-web-backend
spec:
  parentRefs:
  - name: backend-namespaces
    namespace: gateway-conformance-infra
  rules:
  - backendRefs:
    - name: web-backend
      port: 8080
